--- a/server/style.css
+++ b/server/style.css
@@ -17,7 +17,7 @@ p {
 
 #checkbox_wrapper {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-auto-flow: column;
 	height: 500px;
 }
@@ -42,11 +42,18 @@ p {
 .region_latin_carib {
 	grid-column: 5;
 }
-.region_europe_casia {
+.region_europe_casia.headers {
+	grid-column: 6/8;
+}
+
+.region_europe_casia.col1 {
 	grid-column: 6;
 }
-.region_easia {
+.region_europe_casia.col2 {
 	grid-column: 7;
+}
+.region_easia {
+	grid-column: 8;
 }
 
 
@@ -72,7 +79,6 @@ p {
 
 #inhabitants_wrapper {
 	display: inline-block;
-
 	float:left;
 }
 
