--- a/server/style.css
+++ b/server/style.css
@@ -17,14 +17,16 @@ p {
 
 #checkbox_wrapper {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-auto-flow: column;
-	height: 500px;
+	/*height: 500px;*/
+	height: auto;
 }
 
 .headers {
 	font-weight: 500;
 	font-size: 10pt;
+	padding-right: 2em;
 }
 
 .region_ssafrica {
@@ -43,17 +45,21 @@ p {
 	grid-column: 5;
 }
 .region_europe_casia.headers {
-	grid-column: 6/8;
+	grid-column: 6/9;
 }
 
-.region_europe_casia.col1 {
+.region_europe_casia.col0 {
 	grid-column: 6;
 }
-.region_europe_casia.col2 {
+.region_europe_casia.col1 {
 	grid-column: 7;
 }
-.region_easia {
+.region_europe_casia.col2 {
 	grid-column: 8;
+}
+
+.region_easia {
+	grid-column: 9;
 }
 
 
