--- a/server/style.css
+++ b/server/style.css
@@ -62,6 +62,9 @@ p {
 	grid-column: 4;
 }
 
+div.header {
+	padding-left: 1em;
+}
 
 
 #tooltip_wrapper {
@@ -79,15 +82,19 @@ p {
 	width: 5em;
 	width: auto;
 	float: left;
+
 }
 
 #tooltip_wrapper p {
 	margin: 0 0 0 0;
+	padding: 0 0.1em;
 }
 
 #inhabitants_wrapper {
 	display: inline-block;
 	float:left;
+	background-color: #dedede;
+	margin-left: 0.5em;
 }
 
 
