--- a/server/style.css
+++ b/server/style.css
@@ -19,8 +19,8 @@ p {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-auto-flow: column;
-	/*height: 500px;*/
 	height: auto;
+	padding-bottom: 1em;
 }
 
 .headers {
